Action button style (#9)
* chore: merge

* chore: placeholder action button

* feat: font awesome script

* chore: put button into container

* chore: action button classnames

* style: centered circle button

* style: button alpha color

* style: action buttons padding

* chore: placeholder icon buttons

Co-authored-by: Haivex <demozial@gmail.com>

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -28,3 +28,20 @@
 .note__content__text {
   padding: 8px;
 }
+
+.action_buttons {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+
+.action_button {
+  padding: 8px;
+  border-radius: 50%;
+  background-color: transparent;
+}
+
+.action_button:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.2);
+}
