--- a/src/static/index.css
+++ b/src/static/index.css
@@ -17,6 +17,9 @@
 }
 .note__header__title {
   padding: 8px;
+  min-width: 50%;
+  max-width: 50%;
+  outline: none;
 }
 
 .note__content {
@@ -27,6 +30,7 @@
 
 .note__content__text {
   padding: 8px;
+  outline: none;
 }
 
 .action_buttons {
