--- a/src/static/index.css
+++ b/src/static/index.css
@@ -17,6 +17,11 @@
 }
 .note__header__title {
   padding: 8px;
+  min-width: 50%;
+  max-width: 50%;
+  outline: none;
+  display: inline-block;
+  white-space: pre-wrap;
 }
 
 .note__content {
@@ -27,6 +32,9 @@
 
 .note__content__text {
   padding: 8px;
+  outline: none;
+  display: inline-block;
+  white-space: pre-wrap;
 }
 
 .action_buttons {
