--- a/src/static/index.css
+++ b/src/static/index.css
@@ -5,6 +5,7 @@
 }
 
 .note {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
@@ -59,4 +60,20 @@
   overflow: auto;
   min-width: 250px;
   min-height: 250px;
+}
+
+.dragbarVertical {
+  position: absolute;
+  width: 5px;
+  height: 100%;
+  opacity: 0;
+  cursor: ew-resize;
+}
+
+.dragbarHorizontal {
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  opacity: 0;
+  cursor: ns-resize;
 }
