Resizable sticky note (#18)
* chore: merge

* style: resize and min size

* chore: resize by corner

* chore: vertical and horizontal dragbars

* style: vertical and horizontal dragbar

* chore: wip

* chore: resizable sticky

Co-authored-by: Haivex <demozial@gmail.com>

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -5,9 +5,12 @@
 }
 
 .note {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
+  top: 300px;
+  left: 500px;
 }
 
 .note__header {
@@ -52,4 +55,27 @@
 .action_button:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+.resizable {
+  resize: both;
+  overflow: auto;
+  min-width: 250px;
+  min-height: 250px;
+}
+
+.dragbarVertical {
+  position: absolute;
+  width: 5px;
+  height: 100%;
+  opacity: 0;
+  cursor: ew-resize;
+}
+
+.dragbarHorizontal {
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  opacity: 0;
+  cursor: ns-resize;
 }
