--- a/src/static/index.css
+++ b/src/static/index.css
@@ -11,6 +11,12 @@
   justify-content: stretch;
 }
 
+.noteContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .note__header {
   background-color: #f9b208;
   display: flex;
@@ -80,4 +86,28 @@
   width: 100%;
   opacity: 0;
   cursor: ns-resize;
+}
+
+.titleInput {
+  padding: 8px;
+  border: 1px solid #333;
+  border-radius: 10px;
+}
+
+.messageTextarea {
+  padding: 8px;
+  border: 1px solid #333;
+  border-radius: 10px;
+}
+
+.noteForm {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+}
+
+.addNote {
+  border: 1px solid #333;
+  border-radius: 10px;
+  padding: 8px;
 }
