--- a/src/static/index.css
+++ b/src/static/index.css
@@ -17,16 +17,18 @@ body {
 }
 
 .note {
-  position: absolute;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
 }
 
 .noteContainer {
+  position: relative;
   border: 8px double black;
   padding: 8px;
   min-height: 50vh;
+  height: auto;
   width: 80%;
   display: flex;
   flex-wrap: wrap;
