--- a/src/static/index.css
+++ b/src/static/index.css
@@ -151,3 +151,26 @@ footer {
   margin-top: 8px;
   text-align: right;
 }
+
+.colorForm {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
+  margin-bottom: 8px;
+}
+
+.colorLabel {
+  border: 1px solid black;
+  width: 25px;
+  height: 25px;
+}
+
+.colorRadio {
+  visibility: hidden;
+}
+
+.selected {
+  border: 1px solid black;
+  outline: 1px solid black;
+  outline-offset: 2px;
+}
